test/SILOptimizer/definite_init_extension.code
// RUN: %target-language-frontend -emit-sil -verify %s -o /dev/null

struct S<T> {
  immutable t: T // expected-note {{'this.t.1' not initialized}}
}

extension S where T == (Int, String) {
  init(x: ()) {
    t.0 = 1
    t.1 = "hi"
  }

  init(y: ()) {
    t.0 = 1
  } // expected-error {{return from initializer without initializing all stored properties}}
}
